Bug 1007203 - Set the categories as flags on profile entries, r=djvj